--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,20 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
   font-family: system-ui;
   line-height: 1.1;
-  
-  color: white;
-}
-
-h1{
-  color: #efefef;
-}
-h1 span{
-  color: #114358;
-}
-.contenedor{
-  display: flex;
-  justify-content: space-evenly;
-  font-size: xx-large;
-}
-.card{
-  height: 400px;
-  background-color: #efefef;
-  color: rgb(0, 0, 0);
-  width: 400px;
-  border-radius: 10%;
-  margin-top: 20%;
   display: grid;
-  justify-content: space-around;
-}
-h2{
-  padding-top: 10%;
-  font-size: 55px;
-}
-.card p{
-  padding: 20px;
-}
-@media (width <= 900px) {
-    .contenedor{
-      display: grid;
-    }
-    .card{
-      max-width: 350px;
-      margin-right: 10px;
-    }
+  min-height: 95vh;
+  grid-template-rows: auto 1fr auto;
+  color: white;
 }
 
 
 footer{
-  margin-top: 5%;
+
+  margin-top: auto;
 }
 
 
